Logger/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logger
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
