Logger/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: logger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: log-output-config-map
            items:
              - key: information
                path: information
      containers:
        - name: log-output-logger
          image: eetujukka/log-output-logger:1.2
        - name: log-output-server
          image: eetujukka/log-output-server:1.10
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3002
          volumeMounts:
          - name: config-volume
            mountPath: /app/config/information
            subPath: information
