Logger/manifests/pingpong-deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pingpong-dep
  namespace: logger
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pingpong
  strategy:
    canary:
      steps:
        - setWeight: 25
        - analysis:
            templates:
              - templateName: cpu-usage
        - setWeight: 50
        - pause:
            duration: 30s
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: pingpong-postgres-data-storage
          persistentVolumeClaim:
            claimName: log-ping-pong-claim
      containers:
        - name: pingpong
          image: eetujukka/pingpong:1.17
          readinessProbe:
            initialDelaySeconds: 10
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3002
        - name: pingpong-postgres
          image: postgres:18.4-alpine3.24
          volumeMounts:
            - name: pingpong-postgres-data-storage
              mountPath: /var/lib/postgresql
