Logger/manifests/greeting-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greeting-service-svc
  namespace: logger
spec:
  type: ClusterIP
  selector:
    app: greeting-service
    version: "1"
  ports:
    - port: 3003
      protocol: TCP
      targetPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: greeting-service-svc-v2
  namespace: logger
spec:
  type: ClusterIP
  selector:
    app: greeting-service
    version: "2"
  ports:
    - port: 3003
      protocol: TCP
      targetPort: 3003
