Logger/manifests/log-output-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: logger
spec:
  type: ClusterIP
  selector:
    app: log-output
    version: "1"
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc-v2
  namespace: logger
spec:
  type: ClusterIP
  selector:
    app: log-output
    version: "2"
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
