Logger/manifests/log-output-route.yaml
apiVersion: gateway.yaml.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: log-output-route
  namespace: logger
spec:
  parentRefs:
    - name: logger-gateway.yaml
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /log-output
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: log-output-svc
          port: 2345
